# shift-booking

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/core/: security.py
app/routers/: auth.py  bookings.py  rooms.py
